package edu.uees.disenosoftware.actividad3.observer;

import edu.uees.disenosoftware.actividad3.domain.Reserva;

public interface ReservaObserver {

    void actualizar(Reserva reserva);
}
